--- a/.air.toml
+++ b/.air.toml
@@ -28,8 +28,8 @@ tmp_dir = "tmp"
   args_bin = ["server"]
   # 构建的二进制文件名
   bin = "./tmp/main"
-  # 只构建Go程序，前端构建由Vite独立处理
-  cmd = "go build -o ./tmp/main ."
+  # 前后端构建
+  cmd = "pnpm run build & go build -o ./tmp/main ."
   # 延迟时间（毫秒）
   delay = 1000
   # 停止运行旧的二进制文件
