--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,11 +1,9 @@
 name: E2E Tests
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch: 
+  schedule:
+    - cron: '0 3 * * 1'
+  workflow_dispatch:
 
 env:
   SERVER_PORT: '3006'
@@ -20,7 +18,7 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
     outputs:
-      cache-hit: ${{ steps.cache-deps.outputs.cache-hit }}
+      cache-hit: ${{ steps.cache-system.outputs.cache-hit }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
