--- a/courses/sql/index.yaml
+++ b/courses/sql/index.yaml
@@ -1,4 +1,4 @@
-title: 快速开始
+title: SQL 终端
 description: 欢迎来到 KWDB 课程，本场景将引导您快速体验在 KWDB 中执行您的第一个查询。
 details:
   intro:
@@ -12,9 +12,12 @@ details:
     text: finish.md
 backend:
   imageid: kwdb/kwdb
+  port: 26257
   workspace: /kaiwudb/bin
+  privileged: true
+  cmd: ["./kwbase", "start-single-node", "--insecure", "--listen-addr=0.0.0.0:26257"]
 estimatedMinutes: 5
 difficulty: beginner
+sqlTerminal: true
 tags:
-  - 
-  - 快速开始
+  - SQL 终端
