--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" \"tests/playwright/**/*.ts\" --cache --cache-location node_modules/.cache/eslint",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" \"tests/playwright/**/*.ts\" --cache --cache-location node_modules/.cache/eslint --fix",
     "preview": "vite preview",
     "check": "tsc --noEmit",
+    "check:types": "tsc --noEmit",
+    "check:all": "pnpm run check && pnpm run lint",
+    "lint:strict": "eslint \"src/**/*.{ts,tsx}\" \"tests/playwright/**/*.ts\" --cache --cache-location node_modules/.cache/eslint --max-warnings=0",
     "pw:install": "pnpm exec playwright install --with-deps",
     "test:pw": "pnpm exec playwright test",
     "pw:codegen": "npx playwright codegen --output=tests/playwright/new-test.ts http://localhost:3006"
