feat(smart-meter): New smart meter course and related resources docs(data-query): Comment out cross-model query steps and update documentation content fix(terminal): Resolved rendering issues caused by terminal line height and character spacing refactor(Learn): Enhanced security coding for command execution buttons style(multi-mode): Adjust course difficulty labels and document formatting

--- a/courses/data-query/index.yaml
+++ b/courses/data-query/index.yaml
@@ -8,8 +8,8 @@ details:
       text: step1.md
     - title: 关系数据查询
       text: step2.md
-    - title: 跨模查询
-      text: step3.md
+    # - title: 跨模查询
+    #   text: step3.md
   finish:
     text: finish.md
 backend:
