feat(container management): Implemented container status detection and batch cleanup functionality
- Added container status detection logic, automatically connecting to running course containers
- Incorporated batch cleanup for all Playground containers and associated APIs
- Optimised course list page display for container status and cleanup operation UI
- Updated course installation documentation to support environment variable configuration KW_VERSION
Removed obsolete smoke test files, introduced course list status testing

--- a/courses/install/index.yaml
+++ b/courses/install/index.yaml
@@ -18,6 +18,8 @@ backend:
   imageid: kwdb/ubuntu:20.04
   cmd: ["/sbin/init"]
   privileged: true
+  env:
+    - "KW_VERSION=3.0.0"
 estimatedMinutes: 10
 difficulty: intermediate
 tags:
