--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ e2e_testdata
 
 tests/reports
 tests/screenshots
-tests/__pycache__
+tests/e2e/__pycache__
 __pycache__
+
+# Documentation (internal only)
+docs/ARCHITECTURE_ISSUES.md
 tests/e2e/__pycache__
