--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,6 +27,9 @@ jobs:
           go-version: '1.24'
           cache: true
 
+      - name: Create dist directory
+        run: mkdir -p dist
+
       - name: Run Go tests
         run: go test ./... -coverprofile=coverage.out -covermode=atomic
 
