--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - name: Setup Go
         uses: actions/setup-go@v6
@@ -27,8 +29,8 @@ jobs:
           go-version: '1.24'
           cache: true
 
-      - name: Create dist directory
-        run: mkdir -p dist
+      - name: Restore dist directory
+        run: git restore dist/ || true
 
       - name: Run Go tests
         run: go test ./... -coverprofile=coverage.out -covermode=atomic
