--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pw:codegen": "npx playwright codegen --output=tests/playwright/new-test.ts http://localhost:3006"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
     "@codemirror/autocomplete": "^6.19.0",
     "@codemirror/highlight": "^0.19.8",
     "@codemirror/lang-sql": "^6.10.0",
@@ -36,6 +37,7 @@
     "pinyin-match": "^1.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.0.15",
     "react-router-dom": "^7.11.0",
