style(layout): 修复页面布局高度问题
统一使用 flex-1 替代 min-h-dvh 控制内容区域高度
移除 Learn 页面外多余的嵌套 div 以简化布局结构

--- a/courses/multi-mode/index.yaml
+++ b/courses/multi-mode/index.yaml
@@ -1,5 +1,5 @@
 title: 跨模查询
-description: 本场景将带领开发者快速体验 KWDB 的跨模查询。
+description: 本场景将带领开发者快速体验 KWDB 的跨模查询能力。
 details:
   intro:
     text: intro.md
