feat(docker): 支持 Docker 容器化部署
- 实现 Docker Socket Mount 方式的容器化部署
- 课程文件通过 go:embed 嵌入二进制，启动时通过 CopyToContainer 注入
- 使用 Docker API (ContainerExecCreate/Attach) 替代 pty 实现终端交互
- SQL 课程通过容器 IP 连接同级 KWDB 容器
- 新增 DOCKER_DEPLOY 环境变量控制部署模式
- 三阶段 Dockerfile 构建，Dockerfile 和 docker-compose.yml 位于 docker/playground/
- 原 docker/ 目录下的 ubuntu 基础镜像文件迁移至 docker/ubuntu-20.04/
- 新增单元测试（53 个）和 Docker E2E 测试
- CI 新增 docker-e2e job 与 playwright job 并行运行
- 文档增加 Windows 部署说明（WSL2/Named Pipe）

--- a/courses/smart-meter/index.yaml
+++ b/courses/smart-meter/index.yaml
@@ -11,7 +11,7 @@ details:
   finish:
     text: finish.md
 backend:
-  imageid: kwdb/kwdb
+  imageid: kwdb/kwdb:3.0.0
   workspace: /kaiwudb/bin
   # （可选）挂载 meta.sql 到容器，只读
   # - ./meta.sql:/kaiwudb/bin/meta.sql:ro
