--- a/docker/playground/docker-compose.yml
+++ b/docker/playground/docker-compose.yml
@@ -14,11 +14,18 @@ services:
       - SERVER_PORT=3006
       - COURSES_USE_EMBED=true
       - DOCKER_DEPLOY=true
+      - DOCKER_NETWORK=kwdb-playground-net
       - LOG_LEVEL=${LOG_LEVEL:-info}
     restart: unless-stopped
+    networks:
+      - kwdb-playground-net
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3006/health"]
       interval: 30s
       timeout: 5s
       start_period: 10s
       retries: 3
+
+networks:
+  kwdb-playground-net:
+    name: kwdb-playground-net
