feat(release): 添加多架构支持与 Homebrew 自动发布
- 为 Linux arm64 和 macOS amd64 添加构建支持，完善多架构发布
- 新增 Homebrew 安装说明和自动更新工作流
- 更新发布脚本和 Makefile 以包含新架构的构建和打包

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,11 +58,15 @@ jobs:
         with:
           files: |
             bin/kwdb-playground-linux-amd64
+            bin/kwdb-playground-linux-arm64
             bin/kwdb-playground-darwin-arm64
+            bin/kwdb-playground-darwin-amd64
             bin/kwdb-playground-windows-amd64.exe
             bin/checksums.txt
             dist/kwdb-playground-linux-amd64.tar.gz
+            dist/kwdb-playground-linux-arm64.tar.gz
             dist/kwdb-playground-darwin-arm64.tar.gz
+            dist/kwdb-playground-darwin-amd64.tar.gz
             dist/kwdb-playground-windows-amd64.zip
             dist/distribution-checksums.txt
           tag_name: ${{ github.ref_name }}
