--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "tsc --noEmit",
     "check:types": "tsc --noEmit",
     "check:all": "pnpm run check && pnpm run lint",
+    "test": "vitest",
     "lint:strict": "eslint \"src/**/*.{ts,tsx}\" \"tests/playwright/**/*.ts\" --cache --cache-location node_modules/.cache/eslint --max-warnings=0",
     "pw:install": "pnpm exec playwright install --with-deps",
     "test:pw": "pnpm exec playwright test --output=tests/reports",
@@ -54,6 +55,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@playwright/test": "^1.48.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^22.15.30",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -64,6 +67,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.5.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.5.3",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^3.4.17",
@@ -71,7 +75,8 @@
     "typescript-eslint": "^8.50.0",
     "vite": "^6.4.1",
     "vite-plugin-trae-solo-badge": "^1.0.0",
-    "vite-tsconfig-paths": "^6.0.3"
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.18"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
