fix: update go version to 1.24 and ensure clean build
fix: update workflow permissions and docker tags

- update-homebrew.yml: change contents permission to write
- docker-publish.yml: fix tags to only push tag + latest (no semver variants)

fix: 修复 Docker 镜像 tag 和 Homebrew Tap 触发问题

- docker-publish.yml: 去掉 VERSION 的 v 前缀 (v0.5.0 -> 0.5.0)
- update-homebrew.yml: 修复 release published 不触发的问题 (published -> created)
- Makefile: 同步修复 VERSION 变量处理

fix: 修复 GitHub Actions replace 函数报错问题

- docker-publish.yml: 移除不支持的 replace 函数
- Dockerfile: 使用 ${VERSION#v} 语法去掉 v 前缀

fix: 改用 push tag 触发 Homebrew Tap 更新

原因: GITHUB_TOKEN 创建的 release 不会触发其他 workflow

fix: 修复 Docker 镜像 tag 带 v 前缀问题

- 使用 shell 参数扩展去掉 v 前缀
- 手动设置镜像 tags 而不是依赖 metadata-action

fix: 使用 workflow_run 触发 Homebrew Tap 更新

- 改为在 Release workflow 完成后触发
- 从 workflow_run 事件中获取版本号

fix: 修复 Docker 镜像仓库名大写问题

使用 toLowerCase() 将仓库名转为小写

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -58,10 +58,11 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/playground
             registry.cn-hangzhou.aliyuncs.com/kwdb/playground
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha,prefix=
+            type=raw,value=latest
+
+      - name: Set VERSION without v prefix
+        id: version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -70,7 +71,13 @@ jobs:
           file: docker/playground/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/playground:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/playground:${{ steps.version.outputs.VERSION }}
+            ghcr.io/${{ github.repository.toLowerCase() }}:latest
+            ghcr.io/${{ github.repository.toLowerCase() }}:${{ steps.version.outputs.VERSION }}
+            registry.cn-hangzhou.aliyuncs.com/kwdb/playground:latest
+            registry.cn-hangzhou.aliyuncs.com/kwdb/playground:${{ steps.version.outputs.VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             VERSION=${{ github.ref_name }}
